[gd_scene load_steps=13 format=3 uid="uid://dwttqe8ch4p4x"]

[ext_resource type="Script" path="res://scripts/spacecraft.gd" id="1_7i2he"]
[ext_resource type="ArrayMesh" uid="uid://bekr8vu42x6en" path="res://assets/low_poly_spaceship_001_mesh.tres" id="2_2oy8b"]
[ext_resource type="Texture2D" uid="uid://cou0egusoywrt" path="res://assets/crosshair5.1w_256x256_mb.png" id="2_uwlhg"]
[ext_resource type="AudioStream" uid="uid://dmljd1m3it5p0" path="res://assets/retro-laser-gun-shot.wav" id="3_6wfvo"]
[ext_resource type="AudioStream" uid="uid://cixnlf40w3kyf" path="res://assets/retro-explosion.wav" id="4_nqclm"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_kvb2q"]
emission_enabled = true
emission = Color(0.784314, 0.784314, 0, 1)
emission_energy_multiplier = 16.0

[sub_resource type="BoxMesh" id="BoxMesh_roabm"]
material = SubResource("StandardMaterial3D_kvb2q")
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="Curve" id="Curve_pyquk"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.252747), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bevep"]
radius = 1.8907
height = 7.26178

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3o0me"]
emission_enabled = true
emission = Color(0, 0.72549, 0.901961, 1)
emission_energy_multiplier = 16.0

[sub_resource type="BoxMesh" id="BoxMesh_vxa42"]
material = SubResource("StandardMaterial3D_3o0me")
size = Vector3(0.3, 0.3, 0.3)

[sub_resource type="Curve" id="Curve_bps2m"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.197802), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Spacecraft" type="CharacterBody3D"]
script = ExtResource("1_7i2he")

[node name="PlayerMesh" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("2_2oy8b")
skeleton = NodePath("")

[node name="Gun0" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -0.8, -1.4)

[node name="Gun1" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, -0.8, -1.4)

[node name="Crosshair" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -50)
texture_filter = 0
texture = ExtResource("2_uwlhg")

[node name="ThrusterParticles" type="CPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.58637)
amount = 100
lifetime = 2.0
speed_scale = 1.5
local_coords = true
mesh = SubResource("BoxMesh_roabm")
emission_shape = 1
emission_sphere_radius = 0.7
direction = Vector3(0, 0, 1)
spread = 180.0
gravity = Vector3(0, 0, 10)
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_pyquk")

[node name="GunSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("3_6wfvo")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.034371, -0.0394301, -0.115633)
shape = SubResource("CapsuleShape3D_bevep")

[node name="PlayerExplosion" type="CPUParticles3D" parent="."]
unique_name_in_owner = true
emitting = false
amount = 100
lifetime = 1.75
one_shot = true
explosiveness = 1.0
mesh = SubResource("BoxMesh_vxa42")
emission_shape = 2
emission_sphere_radius = 1.0
direction = Vector3(1, 1, 1)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 25.0
initial_velocity_max = 50.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_bps2m")

[node name="ExplosionSound" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_nqclm")
volume_db = 20.0

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
